added the image in a different way

--- a/recreateWebpage.html
+++ b/recreateWebpage.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Kentucky</h1>
     <p>Welcome to Kentucky: Birthplace of Abraham Lincoln</p>
-    <img src="https://lh3.googleusercontent.com/Wi7yPctD6hoR-Q5NoVeF1gxhBxCEX0tkILPZbVnop-1jDoqaSqPCPM3BSf-a5ymA4HcEA30U7Zl4e5M=w1334-h1642" alt="A Farm in Kentucky">
+    <img src="kentuckyFarm.jpeg" alt="A Farm in Kentucky">
     <h3>Here are some things Kentucky is known for:</h3>
     <ul>
         <li>Horse Racing</li>
